<resources>
    <string name="app_name">BigHero</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="apresentacao">Eai! Nós somos Hero e Baymax\n de Operação Big Hero! \n Vamos nos conhecer melhor?</string>

    <string name="resumo">Você pode ver um resumo \nda nossa aventura. \nClique aqui!</string>

    <string name="resumo_trailer">O grande robô inflável está sempre a\npostos para cuidar de Hiro Hamada.\n Quando algo devastador assola a \n cidade, o menino prodígio, seus \n amigos e o robô formam um grupo de \n heróis para combater o mal.</string>

    <string name="spoiler">Ta tranquilo!\nAcabamos com todos...\nos spoilers!</string>

    <string name="aprensetacao_gogo">Eai, sou a Go Go. \n Me formei em engenharia, mas prefiro \na sensação do vento batendo no rosto. \nQue tal uma corridinha?</string>

    <string name="mapa">Abra o mapa, \nescolha seu destino, \ne bom trajeto! \nNos vemos lá!</string>

    <string name="wasabi_apresentacao">Sou cauteloso e perfeccionista.\nAcho que isso é o necessário \npara usar lâminas da forma correta.</string>

    <string name="receita">Que tal usar suas lâminas...\nem uma grande receita?</string>

    <string name="aviso">Tenha cuidado e lembre-se,\ncozinhar é uma arte para perfeccionistas!</string>


    ////////////////////////////

    // Strings tela de personagens
    <string name="hiro">HIRO HAMADA</string>
    <string name="baymax">BAYMAX</string>
    <string name="fred">FRED</string>
    <string name="tomago">GOGO TOMAGO</string>
    <string name="wasabi">WASABI</string>
    <string name="honey">HONEY LEMON</string>
    <string name="persongens">PERSONAGENS</string>


    //String tela Tomago
    <string name="tomago_perso">GO GO TOMAGO</string>
    <string name="tomago_descicao">Tudo fica mais divertido com os discos Maglev. Que funcionam como rodas de ultra velocidade e vão deixar qualquer um comendo poeira.</string>
    <string name="desafio">Esse é um bom lugar pra correr</string>


    //String tela Wasabi
    <string name="wasabi_peso">WASABI</string>
    <string name="wasabi_descricao">Superinteligente e um pouco obcecado por organização suas habilidades com um impressionante arsenal de lâminas de plasma.</string>
    <string name="desafio_wasabi">Que tal um desafio?</string>

    //String tela Hiro
    <string name="hiro_perso">HIRO</string>
    <string name="hiro_descricao">Gênio da robótica que cria uma grande invenção: os Microbôs. Micropartículas que juntas são capazes de reproduzir qualquer forma.</string>
    <string name="mensagem">Me envie uma mensagem</string>

    //String tela Baymax
    <string name="baymax_perso">BAYMAX</string>
    <string name="baymax_descricao">Criado para ser um atendente médico pessoal, Baymax é um robô, capaz de escanear uma pessoa, detectar e tratar seus níveis de stress, dor e humor. Mas Hiro acaba o tornando um herói.</string>
    <string name="lanterna">Que tal ligar os foguetes?</string>

    //String tela Fred
    <string name="fred_perso">FRED</string>
    <string name="fred_descricao">Apaixonado por quadrinhos e monstros, Fred se transforma em Fredzilla, um monstro de garras afiadas que cospe fogo e tem o poder de super salto.</string>
    <string name="fantasia">Veste uma fantasia também!!</string>

    //String tela Honey
    <string name="honey_perso">HONEY</string>
    <string name="honey_descricao">Honey Lemon é a especialista em química que cria misturas incríveis em formato de esferas. Quando lançadas podem livrar seus amigos de situações de risco.</string>

    //String tela home
    <string name="home_descricao">Quando a situação sai do controle e um vilão começa a destruir a cidade, um grupo de amigos se juntam e colocam suas habilidades em prática para tentar salvar a cidade.</string>
    <string name="herois">Conheça os heróis</string>
    <string name="big_hero">OPERAÇÃO BIG HERO</string>

    //String tela trailer
    <string name="trailer">TRAILER</string>
    <string name="trailer_descricao">Que tal conhecer um pouco mais da nossa aventura?</string>
    <string name="botao_trailer">Assistir trailer</string>
    <string name="botao_critica">Ler crítica</string>

    //String tela da lanterta
    <string name="lanterna_on">Você ligou os foguetes!!</string>

    <!--Strings tela cadastro e login-->
    <string name="cadastro_nome">Nome</string>
    <string name="cadastro_email">Email</string>
    <string name="cadastro_senha">Senha</string>
    <string name="cadastro_btn">Cadastrar</string>
    <string name="login_btn">Login</string>
    <string name="rememberme_btn">Lembrar login</string>

</resources>