<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2C2C"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="247dp"
        android:layout_height="44dp"
        android:layout_marginTop="244dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="#F0F0F0"
        android:ems="10"
        android:hint="@string/cadastro_email"
        android:inputType="textEmailAddress"
        android:paddingStart="28dp"
        android:shadowRadius="40"
        android:textColor="#777777"
        android:textColorHint="#777777"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_senha"
        android:layout_width="247dp"
        android:layout_height="44dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="#F0F0F0"
        android:ems="10"
        android:hint="@string/cadastro_senha"
        android:inputType="textPassword"
        android:paddingStart="28dp"
        android:shadowRadius="40"
        android:textColor="#777777"
        android:textColorHint="#777777"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/remember_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="137dp"
        android:layout_height="60dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#C02428"
        android:fontFamily="sans-serif-black"
        android:text="@string/login_btn"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remember_btn" />

    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="137dp"
        android:layout_height="60dp"
        android:layout_marginStart="137dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="135dp"
        android:backgroundTint="#C02428"
        android:fontFamily="sans-serif-black"
        android:onClick="Cadastro"
        android:text="@string/cadastro_btn"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <CheckBox
        android:id="@+id/remember_btn"
        android:layout_width="239dp"
        android:layout_height="33dp"
        android:layout_marginStart="86dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="16dp"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:text="@string/rememberme_btn"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_senha" />


</androidx.constraintlayout.widget.ConstraintLayout>