<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MaisActivity">

    <ImageButton
        android:id="@+id/img_btn_back3"
        android:layout_width="198dp"
        android:layout_height="73dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="250dp"
        android:backgroundTint="#82DBEF"
        android:onClick="Back"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/tooldbar_wasabi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <ImageButton
        android:id="@+id/img_btn_location4"
        android:layout_width="125dp"
        android:layout_height="72dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="40dp"
        android:background="#00FFFFFF"
        android:onClick="Mapas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/img_btn_home3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_location"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/img_btn_home3"
        android:layout_width="125dp"
        android:layout_height="72dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="40dp"
        android:background="#00FFFFFF"
        android:onClick="Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/img_btn_mais3"
        app:layout_constraintStart_toEndOf="@+id/img_btn_location4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_home"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/img_btn_mais3"
        android:layout_width="125dp"
        android:layout_height="72dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="40dp"
        android:background="#00FFFFFF"
        android:onClick="Mais"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_btn_home3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_add_blue"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tooldbar_wasabi"
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:background="?attr/colorPrimary"
        android:backgroundTint="#82DBEF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_vw_wasabi"
        android:layout_width="280dp"
        android:layout_height="477dp"
        android:layout_marginTop="250dp"
        app:layout_constraintBottom_toTopOf="@+id/img_btn_home3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tooldbar_wasabi"
        app:layout_constraintVertical_bias="0.02"
        app:srcCompat="@drawable/wasabi" />

    <TextView
        android:id="@+id/txtwasabi"
        android:layout_width="298dp"
        android:layout_height="66dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="19dp"
        android:text="@string/wasabi"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtaviso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tooldbar_wasabi" />

    <TextView
        android:id="@+id/txtaviso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="20dp"
        android:text="@string/receita"
        android:textColor="#C0535353"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/img_vw_wasabi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtwasabi" />

    <TextView
        android:id="@+id/txtreceita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/aviso"
        android:textColor="#488CB4"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/img_vw_wasabi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtaviso" />

    <Button
        android:id="@+id/btn_receita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="250dp"
        android:backgroundTint="#488CB4"
        android:text="RECEITA"
        app:layout_constraintBottom_toTopOf="@+id/img_btn_home3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtreceita" />

</androidx.constraintlayout.widget.ConstraintLayout>